--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,19 @@
 body {
   margin: 20px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.user {
+  background-color: bisque;
+  border-radius: 5px;
+  box-shadow:  0px 0px 15px 5px rgba(0,0,0,0.36);
+  height: 50px;
+  width: 50%;
+  margin: 20px;
+  text-align: center;
+  font-size: x-large;
 }
 
 code {
